# Projeto_Final_eEDB-019_2026-1_Grupo5

./: .env.example  .gitignore  README.md  colab.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
airflow/dags/: bike_pipeline_dag.py
dbt_project/: .user.yml  dbt_project.yml  profiles.yml
dbt_project/macros/: classify_duration.sql
dbt_project/models/gold/: dim_date.sql  dim_duration_bucket.sql  dim_station.sql  fact_trip.sql  schema.yml
dbt_project/models/staging/: schema.yml  stg_trips.sql
dbt_project/tests/: assert_no_negative_duration.sql  assert_trip_stations_exist.sql
docker/airflow/: Dockerfile
docker/postgres/: init.sql
great_expectations/: great_expectations.yml
great_expectations/checkpoints/: raw_trips_checkpoint.yml
great_expectations/expectations/: .ge_store_backend_id  raw_trips_suite.json
scripts/: download_raw.py  load_raw.py  run_validations.py
src/: bronze.py
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
