[project]
name = "projeto-final-eedb-019-2026-1-grupo5"
version = "0.1.0"
description = "Base inicial da camada Bronze do projeto final."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "python-dotenv==1.2.2",
    "requests==2.32.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
